--- a/Medusa.Analyze1553B.VM/Viewer.VM.csproj
+++ b/Medusa.Analyze1553B.VM/Viewer.VM.csproj
@@ -18,7 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Medusa.Analyze1553B.UIServices\Viewer.UIServices.csproj" />
     <ProjectReference Include="..\Medusa.Analyze1553B.VMServices\Viewer.VMServices.csproj" />
-    <ProjectReference Include="..\Model\ViewerModel.csproj" />
+    <ProjectReference Include="..\Model\Viewer.Model.csproj" />
   </ItemGroup>
 
 </Project>
