--- a/Medusa.Analyze1553B.VMServices/Viewer.VMServices.csproj
+++ b/Medusa.Analyze1553B.VMServices/Viewer.VMServices.csproj
@@ -11,7 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Medusa.Analyze1553B.UIServices\Viewer.UIServices.csproj" />
-    <ProjectReference Include="..\Model\ViewerModel.csproj" />
+    <ProjectReference Include="..\Model\Viewer.Model.csproj" />
   </ItemGroup>
 
   <ItemGroup>
